--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </style>
 
     <div class="container">
-        <div class="header">Merry Christmas
+        <div class="header">Wesołych Świąt
         </div>
         <div class="img"></div>
         <div class="hover"></div>
