--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                     </p>
                 </div>
                 <div class="podpis">
-                    <h4>życzy :</h4>
-                    <h4 class="pp">Dzoanna
+                    <h4>życzą :</h4>
+                    <h4 class="pp">Kasia, Jasiu i Olek
                         </s>
                 </div>
             </div>
